--- a/src/app/UI/view-models/respuestas/respuestas.component.html
+++ b/src/app/UI/view-models/respuestas/respuestas.component.html
@@ -21,13 +21,16 @@
                     <label class="checkbox path">
                         <input type="checkbox" (change)="onSelect(j, i.respuesta)">
                         <svg viewBox="0 0 21 21">
-                            <path d="M5,10.75 L8.5,14.25 L19.4,2.3 C18.8333333,1.43333333 18.0333333,1 17,1 L4,1 C2.35,1 1,2.35 1,4 L1,17 C1,18.65 2.35,20 4,20 L17,20 C18.65,20 20,18.65 20,17 L20,7.99769186"></path>
+                            <path
+                                d="M5,10.75 L8.5,14.25 L19.4,2.3 C18.8333333,1.43333333 18.0333333,1 17,1 L4,1 C2.35,1 1,2.35 1,4 L1,17 C1,18.65 2.35,20 4,20 L17,20 C18.65,20 20,18.65 20,17 L20,7.99769186">
+                            </path>
                         </svg>
                     </label>
                 </div>
             </div>
 
-            <p class="card__apply" (click)="evaluar()" style="padding: 1vw; border: solid 1px orange; width: 15vw;"><a>Enviar respuesta<i class="fa fa-arrow-right"></i></a></p>
+            <p class="card__apply" (click)="evaluar()" style="padding: 1vw; border: solid 1px orange; width: 15vw;">
+                <a>Enviar respuesta<i class="fa fa-arrow-right"></i></a></p>
 
             <div *ngIf="eval == 1" class="alert alert-success activate" role="alert">
                 Esta respuesta es correcta
@@ -38,4 +41,173 @@
             </div>
         </div>
     </div>
+    <p class="card__apply" (click)="guardar()" style="padding: 1vw; border: solid 1px orange; width: 15vw;">
+        <a>Finalizar<i class="fa fa-arrow-right"></i></a></p>
+
 </div>
+<!-- <div class="col-9">
+    <div class="container">
+        <div id="stepper1" class="bs-stepper">
+            <div class="bs-stepper-header" role="tablist">
+                <div class="step" *ngFor="let i of collection_de_preguntas" [attr.data-target]='"#test-l-"+i.indice'>
+                    <button class="step-trigger">
+                        <span class="bs-stepper-circle">{{i.indice}}</span>
+                        <span class="bs-stepper-label">Pregunta</span>
+                    </button>
+                </div>
+                <div class="line"></div>
+                <div class="bs-stepper-content" style="padding: 0px !important;">
+                    <form (ngSubmit)="onSubmit()">
+                        <div *ngFor="let i of collection_de_preguntas" [attr.id]='"test-l-"+i.indice' class="content">
+                            <div class="col-12" style="background-image: url(../../../../assets/fondo-nave.png); background-repeat: no-repeat; background-size: 90vw 41vw; background-position-x: -15vw; background-position-y: 0vw;">
+                                <div class="row" style="width: 79vw; margin-left: 0vw;">
+                                    <div class="row">
+                                        <div class="col-5" style="background: white; border-radius: 10px; height: 11vw; padding: 1vw; margin-top: 2vw; margin-left: 2vw;width: 28vw;">
+                                            <div class="row" style="margin-left: 0vw;"> <span style="color: blue; font-weight: bolder; font-size: larger;"> SUMAR
+                                                </span></div>
+                                            <div class="row">
+                                                <div class="col-1" style="margin-left: -2vw; width: 9vw;">
+                                                    <h6 style=" transform: rotate(270deg); margin-top: 1.4vw; ">
+                                                        REGRESAR </h6>
+                                                </div>
+                                                <div class="col-1" style="width: 6vw; margin-left: -3vw;">
+                                                    <div class="row">Unidad</div>
+                                                    <div class="row">Tema</div>
+                                                    <div class="row">Pregunta</div>
+                                                    <div class="row">Nivel</div>
+                                                </div>
+                                                <div class="col-1" style="width: 17vw;">
+                                                    <div class="row"><a href=``>Ver Aqui</a></div>
+                                                    <div class="row">i.subtema</div>
+                                                    <div class="row">i.indice</div>
+                                                    <div class="row">FACIL</div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-4" style="margin-left: 16vw; margin-top: 4vw; width: 24vw; ">
+                                            <div class="row">
+                                                <div class="col-2" style="width: 17vw;">
+                                                    <h6 style="color: white; margin-top: 0.4vw;"> Tiempo Transcurrido:
+                                                    </h6>
+                                                </div>
+                                                <div class="col-1" style="width: 9vw;">
+                                                    <countdown style="color: white; margin-left: -3vw; font-size: 20px; " [config]="{leftTime: 20} "></countdown>
+
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="row " style="margin-top: 2vw;margin-bottom: 2vw; ">
+                                        <div class="col-12 ">
+                                            <div class="row " style="width: 100%; margin-top: 3vw; ">
+                                                <h1 style="font-size: 35px; color: white !important; text-align: center; font-weight: bolder; ">
+                                                    ¿Cuál es la suma de 1.33 + 2.05?</h1>
+                                            </div>
+                                            <div class="row ">
+                                                <div class="row ">
+                                                    <h5 style="width: 79vw; text-align: center; font-size: 40px; font-weight: bolder; color: white; ">
+                                                        1.33 + 2.05</h5>
+                                                </div>
+                                                <div class="row " style="width: 79vw; "> <input type="text " class="item " style="width: 13vw; margin-left: 32.5vw; border-radius: 5px; border: solid 0px; ">
+                                                </div>
+                                            </div>
+                                            <div class="row " style="width: 13vw; margin-top: 2vw; margin-bottom: 3vw;">
+                                                <button style="width: 13vw; margin-left: 32.5vw; background-color: #00CCF2; color: white; border: solid 0px; margin-top: 0.5vw; border-radius: 5px; ">
+                                                    <h5 style="font-size: 0.9rem; margin-top: 0.5vw; "> ENVIAR RESPUESTA
+                                                    </h5>
+                                                </button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</div>
+<!-- <div class="container">
+    <div id="stepper1" class="bs-stepper">
+        <div class="bs-stepper-header">
+            <div class="step" *ngFor="let i of collection_de_preguntas" [attr.data-target]='"#test-l-"+i.indice'>
+                <button class="step-trigger">
+                    <span class="bs-stepper-circle">{{i.indice}}</span>
+                    <span class="bs-stepper-label">Pregunta</span>
+                </button>
+            </div>
+        </div>
+        <div class="bs-stepper-content">
+            <form (ngSubmit)="onSubmit()">
+                <div *ngFor="let i of collection_de_preguntas" [attr.id]='"test-l-"+i.indice'>
+                    <div class="col-12" style="background-image: url(../../../../assets/fondo-nave.png); background-repeat: no-repeat; background-size: 90vw 41vw; background-position-x: -15vw; background-position-y: 0vw;">
+                        <div class="row" style="width: 79vw; margin-left: 0vw;">
+                            <div class="row">
+                                <div class="col-5" style="background: white; border-radius: 10px; height: 11vw; padding: 1vw; margin-top: 2vw; margin-left: 2vw;width: 28vw;">
+                                    <div class="row" style="margin-left: 0vw;"> <span style="color: blue; font-weight: bolder; font-size: larger;"> SUMAR
+                                        </span></div>
+                                    <div class="row">
+                                        <div class="col-1" style="margin-left: -2vw; width: 9vw;">
+                                            <h6 style=" transform: rotate(270deg); margin-top: 1.4vw; ">
+                                                REGRESAR </h6>
+                                        </div>
+                                        <div class="col-1" style="width: 6vw; margin-left: -3vw;">
+                                            <div class="row">Unidad</div>
+                                            <div class="row">Tema</div>
+                                            <div class="row">Pregunta</div>
+                                            <div class="row">Nivel</div>
+                                        </div>
+                                        <div class="col-1" style="width: 17vw;">
+                                            <div class="row"><a href=``>Ver Aqui</a></div>
+                                            <div class="row">i.subtema</div>
+                                            <div class="row">i.indice</div>
+                                            <div class="row">FACIL</div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-4" style="margin-left: 16vw; margin-top: 4vw; width: 24vw; ">
+                                    <div class="row">
+                                        <div class="col-2" style="width: 17vw;">
+                                            <h6 style="color: white; margin-top: 0.4vw;"> Tiempo Transcurrido:
+                                            </h6>
+                                        </div>
+                                        <div class="col-1" style="width: 9vw;">
+                                            <countdown style="color: white; margin-left: -3vw; font-size: 20px; " [config]="{leftTime: 20} "></countdown>
+
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row " style="margin-top: 2vw;margin-bottom: 2vw; ">
+                                <div class="col-12 ">
+                                    <div class="row " style="width: 100%; margin-top: 3vw; ">
+                                        <h1 style="font-size: 35px; color: white !important; text-align: center; font-weight: bolder; ">
+                                            ¿Cuál es la suma de 1.33 + 2.05?</h1>
+                                    </div>
+                                    <div class="row ">
+                                        <div class="row ">
+                                            <h5 style="width: 79vw; text-align: center; font-size: 40px; font-weight: bolder; color: white; ">
+                                                1.33 + 2.05</h5>
+                                        </div>
+                                        <div class="row " style="width: 79vw; "> <input type="text " class="item " style="width: 13vw; margin-left: 32.5vw; border-radius: 5px; border: solid 0px; ">
+                                        </div>
+                                    </div>
+                                    <div class="row " style="width: 13vw; margin-top: 2vw; margin-bottom: 3vw;">
+                                        <button style="width: 13vw; margin-left: 32.5vw; background-color: #00CCF2; color: white; border: solid 0px; margin-top: 0.5vw; border-radius: 5px; ">
+                                            <h5 style="font-size: 0.9rem; margin-top: 0.5vw; "> ENVIAR RESPUESTA
+                                            </h5>
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <button (click)="next()" class="btn btn-primary">Next</button>
+                </div>
+              
+            </form>
+        </div>
+    </div>
+</div> -->
