--- a/src/app/UI/view-models/respuestas/respuestas.component.scss
+++ b/src/app/UI/view-models/respuestas/respuestas.component.scss
@@ -318,3 +318,13 @@ body {
         }
     }
 }
+
+.col-9 {
+    margin-left: 18vw !important;
+    margin-top: -45vw !important;
+    height: 40vw !important;
+    width: 80% !important;
+    position: absolute;
+    overflow-x: hidden !important;
+    overflow-y: scroll !important;
+}
