--- a/src/app/UI/view-models/respuestas/respuestas.component.html
+++ b/src/app/UI/view-models/respuestas/respuestas.component.html
@@ -7,7 +7,7 @@
         display: block;
     }
 </style>
-<div class="col-9">
+<div>
 
     <div class="row1-container" *ngFor="let i of collection_de_preguntas">
         <div class="box orange">
