Se realiza los vista de practica

--- a/src/app/UI/view-models/practicar/practicar.component.html
+++ b/src/app/UI/view-models/practicar/practicar.component.html
@@ -1,1 +1,22 @@
-<p>practicar works!</p>
+<div class="container">    
+    <!-- <div class="row1-container" *ngFor="let item of collection"> -->
+    <div class="row1-container" >
+
+        <div class="box red">
+            <img src="https://assets.codepen.io/2301174/icon-team-builder.svg" alt="">
+            <h2>Nombre Curso</h2>
+            <!-- <p class="card__apply" (click)="navigate(idGrado, item.id, item.curso, type_user)"><a>Ver los Temas<i class="fa fa-edit"></i></a></p> -->
+            <p class="card__apply" ><a>Ver los Temas<i class="fa fa-edit"></i></a></p>
+        </div>
+    </div>
+    <div class="row1-container" >
+
+        <div class="box red">
+            <img src="https://assets.codepen.io/2301174/icon-team-builder.svg" alt="">
+            <h2>Nombre Curso</h2>
+            <!-- <p class="card__apply" (click)="navigate(idGrado, item.id, item.curso, type_user)"><a>Ver los Temas<i class="fa fa-edit"></i></a></p> -->
+            <p class="card__apply" ><a>Ver los Temas<i class="fa fa-edit"></i></a></p>
+        </div>
+    </div>
+</div>
+
