--- a/src/app/UI/view-models/practicar-resolver/practicar-resolver.component.html
+++ b/src/app/UI/view-models/practicar-resolver/practicar-resolver.component.html
@@ -1,1 +1,67 @@
-<p>practicar-resolver works!</p>
+<div class="container">
+
+    <div class="header">
+        <h1>Nombre del Curso</h1>
+        <button class="btn btn-danger">Salir</button>
+        <div class="pt-2">            
+            <div class="card border-dark mb-3" >
+                <div class="card-header">Pregunta</div>
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-md-10">
+                            <h5 class="card-title">Contenido</h5>
+                            <p class="card-text">Descripcion de pregunta</p>
+                            <!-- Button trigger modal -->
+                            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+                                Launch demo modal
+                            </button>
+                        </div>
+                        <div class="col-md-2">
+                            <div class="card border-success mb-1" >                                
+                                <div class="card-body text-success text-center">
+                                    <p class="card-text">TOTAL CORRECTOS</p>  
+                                    <h3 class="card-title">0</h3>                                  
+                                </div>
+                            </div>
+                            <div class="card border-danger mb-1" >                                
+                                <div class="card-body text-danger text-center">
+                                    <p class="card-text">TOTAL INCORRECTOS</p>  
+                                    <h3 class="card-title">0</h3>                                  
+                                </div>
+                            </div>
+                            <div class="card border-info " >                                
+                                <div class="card-body text-info text-center">
+                                    <p class="card-text">TOTAL PREGUNTAS</p>  
+                                    <h3 class="card-title">0</h3>                                  
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>                    
+        </div>
+        <!-- <p>{{type_user}}. Aquí tienes una lista de las competencias de matemáticas para los estudiantes en 5.To grado. Estas competencias están clasificadas en categorías</p> -->
+    </div>    
+</div>
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          ...
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
+<br>
+
