--- a/src/app/UI/view-models/practicar-temas/practicar-temas.component.html
+++ b/src/app/UI/view-models/practicar-temas/practicar-temas.component.html
@@ -1,1 +1,48 @@
-<p>practicar-temas works!</p>
+<div class="container">
+
+    <div class="header">
+        <h1>Nombre del Curso</h1>
+
+        <div class="row">
+            <div class="col-md-4">
+                <div class="card border-warning mb-3">                    
+                    <div class="card-body">
+                        <h5 class="card-title">Nombre del tema</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">ULTIMO PUNTAJE 15/20</h6>                                                
+                    </div>
+                    <div class="card-footer bg-transparent ">
+                        <a href="#" class="card-link"><i class="fa fa-edit"></i> Aprender</a>
+                        <a href="#" class="card-link"><i class="fa fa-edit"></i> Reforzar</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card border-warning mb-3">                    
+                    <div class="card-body">
+                        <h5 class="card-title">Nombre del tema</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">ULTIMO PUNTAJE 15/20</h6>                                                
+                    </div>
+                    <div class="card-footer bg-transparent ">
+                        <a href="#" class="card-link"><i class="fa fa-edit"></i> Aprender</a>
+                        <a href="#" class="card-link"><i class="fa fa-edit"></i> Reforzar</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card border-warning mb-3">                    
+                    <div class="card-body">
+                        <h5 class="card-title">Nombre del tema</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">ULTIMO PUNTAJE 15/20</h6>                                                
+                    </div>
+                    <div class="card-footer bg-transparent ">
+                        <a href="#" class="card-link"><i class="fa fa-edit"></i> Aprender</a>
+                        <a href="#" class="card-link"><i class="fa fa-edit"></i> Reforzar</a>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <!-- <p>{{type_user}}. Aquí tienes una lista de las competencias de matemáticas para los estudiantes en 5.To grado. Estas competencias están clasificadas en categorías</p> -->
+    </div>    
+</div>
+<br>
