--- a/src/app/UI/view-models/responder-preguntas/responder-preguntas.component.html
+++ b/src/app/UI/view-models/responder-preguntas/responder-preguntas.component.html
@@ -7,3 +7,7 @@
         <p class="card__apply" (click)="navigateCursos(i.id)"><a>Ver las Preguntas<i class="fa fa-edit"></i></a></p>
     </div>
 </div>
+
+<div>
+    asd
+</div>
