--- a/src/app/UI/view-models/respuestas/respuestas.component.scss
+++ b/src/app/UI/view-models/respuestas/respuestas.component.scss
@@ -1,310 +1,20 @@
-@import 'bootstrap/dist/css/bootstrap.min.css';
-@import 'bs-stepper/dist/css/bs-stepper.min.css';
-* {
-    --red: hsl(0, 78%, 62%);
-    --cyan: hsl(180, 62%, 55%);
-    --orange: hsl(34, 97%, 64%);
-    --blue: hsl(212, 86%, 64%);
-    --varydarkblue: hsl(234, 12%, 34%);
-    --grayishblue: hsl(229, 6%, 66%);
-    --verylightgray: hsl(0, 0%, 98%);
-    --weight1: 200;
-    --weight2: 400;
-    --weight3: 600;
+.card-header {
+    text-align: left !important;
 }
 
-body {
-    font-size: 15px;
-    font-family: 'Poppins', sans-serif;
-    background-color: var(--veryLightGray);
+.card-body {
+    flex: 1 1 auto;
+    padding: 0.2rem 0.2rem;
 }
 
-.attribution {
-    font-size: 11px;
-    text-align: center;
-    a {
-        color: hsl(228, 45%, 44%);
-    }
-}
-
-h1 {
-    &:first-of-type {
-        font-weight: var(--weight1);
-        color: var(--varyDarkBlue);
-    }
-    &:last-of-type {
-        color: var(--varyDarkBlue);
-    }
-}
-
-.header {
-    text-align: center;
-    line-height: 0.8;
-    margin-bottom: 10px;
-    margin-top: 10px;
-    p {
-        margin: 0 auto;
-        line-height: 2;
-        color: var(--grayishBlue);
-    }
-}
-
-.box {
-    p {
-        color: var(--grayishBlue);
-    }
-    border-radius: 5px;
-    padding: 30px;
-    margin: 10px;
-    // -webkit-box-shadow: 0px 10px 20px -20px;
-    // -moz-box-shadow: 0px 30px 40px -20px;
-    // -ms-box-shadow: 0px 30px 40px -20px;
-    // -o-box-shadow: 0px 30px 40px -20px;
-    box-shadow: 0px 5px 30px -20px;
-}
-
-img {
-    float: right;
-}
-
-.cyan {
-    border-top: 3px solid var(--cyan);
-}
-
-.red {
-    border-top: 3px solid var(--red);
-}
-
-.blue {
-    border-top: 3px solid var(--blue);
-}
-
-.orange {
-    border-top: 3px solid var(--orange);
-}
-
-h2 {
-    color: var(--varyDarkBlue);
-    font-weight: var(--weight3);
-}
-
-@media (max-width: 400px) {
-    h1 {
-        font-size: 1.5rem;
-    }
-}
-
-@media (max-width: 450px) {
-    .box {
-        height: 200px;
-    }
-}
-
-@media (max-width: 950px) and (min-width: 450px) {
-    .box {
-        text-align: center;
-        height: 180px;
-    }
-}
-
-@media (min-width: 950px) {
-    .row1-container {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-    .row2-container {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-    .box-down {
-        position: relative;
-        top: 150px;
-    }
-    .box {
-        width: 67%;
-    }
-    .header {
-        p {
-            width: 30%;
-        }
-    }
-}
-
-a {
-    position: relative;
-    text-decoration: none;
-    color: rgba(51, 7, 7, 0.9);
-}
-
-a::after {
-    position: absolute;
-    top: 25px;
-    left: 0;
-    content: "";
-    width: 0%;
-    height: 3px;
-    background-color: hsl(34, 97%, 64%);
-    transition: all 0.5s;
-}
-
-a:hover::after {
-    width: 100%;
-}
-
-.card__apply {
-    grid-row: 4/5;
-    align-self: center;
+#alter_X {
+    border: 1px solid green;
+    border-radius: 5%;
+    color: green;
     cursor: pointer;
 }
 
-i {
-    margin-left: 10px;
-}
-
-
-/*  OTHERS */
-
-.checkbox {
-    --background: #fff;
-    --border: #D1D6EE;
-    --border-hover: #BBC1E1;
-    --border-active: #1E2235;
-    --tick: #fff;
-    position: relative;
-    input,
-    svg {
-        width: 21px;
-        height: 21px;
-        display: block;
-    }
-    input {
-        -webkit-appearance: none;
-        -moz-appearance: none;
-        position: relative;
-        outline: none;
-        background: var(--background);
-        border: none;
-        margin: 0;
-        padding: 0;
-        cursor: pointer;
-        border-radius: 4px;
-        transition: box-shadow .3s;
-        box-shadow: inset 0 0 0 var(--s, 1px) var(--b, var(--border));
-        &:hover {
-            --s: 2px;
-            --b: var(--border-hover);
-        }
-        &:checked {
-            --b: var(--border-active);
-        }
-    }
-    svg {
-        pointer-events: none;
-        fill: none;
-        stroke-width: 2px;
-        stroke-linecap: round;
-        stroke-linejoin: round;
-        stroke: var(--stroke, var(--border-active));
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 21px;
-        height: 21px;
-        transform: scale(var(--scale, 1)) translateZ(0);
-    }
-    &.path {
-        input {
-            &:checked {
-                --s: 2px;
-                transition-delay: .4s;
-                &+svg {
-                    --a: 16.1 86.12;
-                    --o: 102.22;
-                }
-            }
-        }
-        svg {
-            stroke-dasharray: var(--a, 86.12);
-            stroke-dashoffset: var(--o, 86.12);
-            transition: stroke-dasharray .6s, stroke-dashoffset .6s;
-        }
-    }
-    &.bounce {
-        --stroke: var(--tick);
-        input {
-            &:checked {
-                --s: 11px;
-                &+svg {
-                    animation: bounce .4s linear forwards .2s;
-                }
-            }
-        }
-        svg {
-            --scale: 0;
-        }
-    }
-}
-
-@keyframes bounce {
-    50% {
-        transform: scale(1.2);
-    }
-    75% {
-        transform: scale(.9);
-    }
-    100% {
-        transform: scale(1);
-    }
-}
-
-html {
-    box-sizing: border-box;
-    -webkit-font-smoothing: antialiased;
-}
-
-* {
-    box-sizing: inherit;
-    &:before,
-    &:after {
-        box-sizing: inherit;
-    }
-}
-
-// Center & dribbble
-body {
-    min-height: 100vh;
-    display: flex;
-    font-family: 'Roboto', Arial;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    background: #F6F8FF;
-    .grid {
-        display: grid;
-        grid-template-columns: repeat(2, minmax(0, 1fr));
-        grid-gap: 24px;
-    }
-    .dribbble {
-        position: fixed;
-        display: block;
-        right: 20px;
-        bottom: 20px;
-        img {
-            display: block;
-            height: 28px;
-        }
-    }
-    .twitter {
-        position: fixed;
-        display: block;
-        right: 64px;
-        bottom: 14px;
-        svg {
-            width: 32px;
-            height: 32px;
-            fill: #1da1f2;
-        }
-    }
+#alter_X :hover {
+    background-color: green;
+    color: white;
 }
