--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
     <!-- <app-sidebar></app-sidebar> -->
     <router-outlet></router-outlet>
 </div>
-<footer>
+<footer style="position: relative; bottom: 0; width: 100%; height: 40px; ">
     <p class="attribution">
         {{footer_title}}
     </p>
