--- a/src/app/UI/view-models/respuestas/respuestas.component.html
+++ b/src/app/UI/view-models/respuestas/respuestas.component.html
@@ -46,58 +46,29 @@
 
 </div> -->
 
-<div class="container">
-
+<div class="container" style="max-width: none; max-height: none; padding-top: 20px; background-image: url('https://images.vexels.com/media/users/3/145252/raw/02dabb44e9ba039fe76c8f08dd67172a-lanzamiento-de-cohete-al-espacio-ilustracion.jpg'); background-repeat: no-repeat; background-size: cover;">
     <div class="header">
         <div class="container" style="margin: 20px;">
             <div class="row">
                 <div class="col-10">
-                    <h1>Nombre del curso</h1>
+                    <h1 style="color: white; font-weight: bold;">Nombre del curso</h1>
                 </div>
                 <div class="col-2" style="align-self: center;">
                     <button class="btn btn-danger">Salir</button>
                 </div>
             </div>
         </div>
-
-        <div class="pt-2">
-            <div class="card border-dark mb-3">
-                <div class="card-body">
-                    <div class="row">
-                        <div class="col-md-10" *ngFor="let i of collection_de_preguntas_completo">
-                            <div class="container" style="margin: 10px;">
-                                <div class="container" id="pregunta">
-                                    <div class="card-header">
-                                        <h5 class="card-title">{{i.pregunta}}</h5>
-                                        <p class="card-text">{{i.descripcion}}</p>
-                                    </div>
-                                    <div class="card-body">
-                                        <div class="container" *ngFor="let elem of i.elementos">
-                                            <div class="card-body" *ngIf="elem.tipoElemento == 'texto'">
-                                                <h5 class="card-title">{{elem.valor}}</h5>
-                                            </div>
-                                            <img *ngIf="elem.tipoElemento == 'imagen'" src="{{elem.valor}}" class="card-img-top" alt="Image" style="width: 150px;">
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="container" id="alternativas">
-                                    <div class="row">
-                                        <div class="col-1 card p-0 m-1" id="alter_X" *ngFor="let alte of i.alternativas">
-                                            <div class="container" (click)="onSelect(alte.id, alte.correcta)">
-                                                <div class="text-center">
-                                                    <h3 class="card-title">{{alte.valor}}</h3>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
+        <div class="pt-2" style="background-color: transparent;">
+            <div class="card mb-3" style="background-color: transparent;">
+                <div class="card-body" style="background-color: transparent;">
+                    <div class="row" style="background-color: transparent;">
+                        <div class="col-md-10" style="background-color: transparent;">
+                            <app-steps-preguntas [preguntas]="collection_de_preguntas_completo"></app-steps-preguntas>
                         </div>
                         <div class="col-md-2">
                             <div class="card border-success mb-1">
                                 <div class="card-body text-success text-center">
-                                    <p class="card-text">TOTAL CORRECTOS</p>
+                                    <p class="card-text">TIEMPO PASADO - FALTA</p>
                                     <h3 class="card-title">{{timePassed}}</h3>
                                 </div>
                             </div>
