--- a/src/styles.scss
+++ b/src/styles.scss
@@ -51,3 +51,5 @@ body {
 .card-footer {
     text-align: center !important;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
