--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,11 +2,10 @@
     <app-navbar></app-navbar>
 </div>
 
-<div class="row">
-    <!-- <app-sidebar></app-sidebar> -->
+<div class="row generalDivApp" id="general_div_app" style="display: flex; margin-bottom: 0px; padding-bottom: 0px; height: 100vh;">
     <router-outlet></router-outlet>
 </div>
-<footer style="position: relative; bottom: 0; width: 100%; height: 40px; ">
+<footer>
     <p class="attribution">
         {{footer_title}}
     </p>
