--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,10 +7,36 @@ h1 {
 }
 
 .attribution {
+    height: 0px;
     font-size: 11px;
     text-align: center;
     a {
         color: hsl(228, 45%, 44%);
     }
-    position: relative;
+}
+
+.generalDivApp::-webkit-scrollbar {
+    width: 9px;
+}
+
+.generalDivApp::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-color: orange !important;
+    border: solid 0px;
+}
+
+.generalDivApp::-webkit-scrollbar-track {
+    background-color: transparent !important;
+    border-radius: 10px;
+}
+
+footer {
+    position: fixed;
+    float: left;
+    bottom: 0;
+    width: 10%;
+    bottom: 10px;
+    background-color: white;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
 }
