--- a/src/app/UI/view-models/respuestas/respuestas.component.html
+++ b/src/app/UI/view-models/respuestas/respuestas.component.html
@@ -68,7 +68,7 @@
                         <div class="col-md-2">
                             <div class="card border-success mb-1 cardInfo">
                                 <div class="card-body text-success text-center">
-                                    <p class="card-text">TIEMPO PASADO - FALTA</p>
+                                    <p class="card-text">TIEMPO PASADO</p>
                                     <h3 class="card-title">{{tiempo_transcurrido}}</h3>
                                 </div>
                             </div>
